fix: add rainbowkit on mobile, change theme to night

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn-default {
+    @apply text-zinc-300 hover:text-white cursor-pointer btn btn-secondary rounded-full bg-zinc-900 hover:bg-zinc-600;
+  }
+}
+
 .HideScollBar::-webkit-scrollbar {
   display: none;
 }
